--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+
+IC-Datasets/*
+
 # Repo-specific GitIgnore ----------------------------------------------------------------------------------------------
 *.jpg
 *.jpeg
